--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -13,7 +13,13 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <div>
+    <ul>
+      <li *ngFor="let item of item$ | async">
+        {{ item.nomeGasto }} - {{ item.tipoGasto}} - {{ item.valorGasto}}
+      </li>
+    </ul>
+  </div>
   <div id="container">
     <strong class="capitalize">{{ folder }}</strong>
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
