--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -16,7 +16,7 @@
   <div>
     <ul>
       <li *ngFor="let item of item$ | async">
-        {{ item.nomeGasto }} - {{ item.tipoGasto}} - {{ item.valorGasto}}
+        {{ item.descricao }} - {{ item.tipoGasto}} - {{ item.valorGasto}}
       </li>
     </ul>
   </div>
