--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -16,4 +16,8 @@
     <ion-input [(ngModel)]="senha" type="password"></ion-input>
   </ion-item>
   <ion-button expand="block" (click)="efetuarLogin()">Entrar</ion-button>
+  <ion-toolbar>
+    <ion-title size="small">{{ autenticacao }}</ion-title>
+  </ion-toolbar>
+
 </ion-content>
