--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -19,5 +19,6 @@
   <ion-toolbar>
     <ion-title size="small">{{ autenticacao }}</ion-title>
   </ion-toolbar>
+  <ion-button expand="block" color="danger" (click)="cadastrar()">Cadastrar</ion-button>
 
 </ion-content>
