--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -17,7 +17,7 @@
   </ion-item>
   <ion-button expand="block" (click)="efetuarLogin()">Entrar</ion-button>
   <ion-toolbar>
-    <ion-title size="small">{{ autenticacao }}</ion-title>
+    <ion-title size="small" color="danger">{{ autenticacao }}</ion-title>
   </ion-toolbar>
   <ion-button expand="block" color="danger" (click)="cadastrar()">Cadastrar</ion-button>
 
