Pagina de Login, cadastro e perfil

--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -13,15 +13,27 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div>
-    <ul>
-      <li *ngFor="let item of item$ | async">
-        {{ item.descricao }} - {{ item.tipoGasto}} - {{ item.valorGasto}}
-      </li>
-    </ul>
-  </div>
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Card Title</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let item of item$ | async">
+          <ion-label> {{ item.descricao }} - {{ item.tipoGasto}} - {{ item.valorGasto}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
