--- a/src/app/cadastrar/cadastrar.page.html
+++ b/src/app/cadastrar/cadastrar.page.html
@@ -8,19 +8,19 @@
 
 <ion-content>
   <ion-item>
-    <ion-label position="floating">Nome</ion-label>
+    <ion-label position="floating">Nome:</ion-label>
     <ion-input [(ngModel)]="user.nome" ></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">E-mail</ion-label>
+    <ion-label position="floating">E-mail:</ion-label>
     <ion-input [(ngModel)]="user.email" ></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Senha</ion-label>
+    <ion-label position="floating">Senha:</ion-label>
     <ion-input [(ngModel)]="user.senha" type="password"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Repetir senha</ion-label>
+    <ion-label position="floating">Repetir senha:</ion-label>
     <ion-input [(ngModel)]="user.repetirSenha" type="password"></ion-input>
   </ion-item>
 
@@ -50,6 +50,7 @@
       </ion-item>
     </ion-radio-group>
   </ion-list>
+
   <ion-item-divider></ion-item-divider>
   <ion-list>
     <ion-radio-group [(ngModel)]="user.formacao">
