--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -86,6 +86,9 @@
   <ion-toolbar>
     <ion-title size="small" color="danger">{{ erroMsn }}</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-title size="small" color="primary">{{ okMsn }}</ion-title>
+  </ion-toolbar>
 
   <ion-button expand="block" (click)="updateDuUsuario()">Salvar</ion-button>
   <ion-button expand="block" color="danger" (click)="voltar()">Voltar</ion-button>
