--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -26,6 +26,14 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-item>
+    <ion-toolbar>
+      <ion-title size="small" color="danger">{{ erroMsn }}</ion-title>
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-title size="small" color="primary">{{ okMsn }}</ion-title>
+    </ion-toolbar>
+  </ion-item>
 
   <ion-item *ngFor="let item of item$ | async">
     <ion-grid>
@@ -55,8 +63,8 @@
         <ion-row>
           <ion-col class="ion-align-self-start" size="12" size-md>
             <strong>R$ {{ item.valorGasto}}</strong>
-            <br><ion-button color="primary" size="small" (click)="editar(item.docId)">EDITAR </ion-button>
-            <br><ion-button color="danger" size="small" (click)="excluir(item.docId)">EXCLUIR</ion-button>
+            <br><ion-button color="primary" size="small" (click)="editarModelGatos(item)">EDITAR </ion-button>
+            <br><ion-button color="danger" size="small" (click)="abrirConfirmacaoDialogue(item.docId)">EXCLUIR</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
