Esqueleto para Grafico

--- a/src/app/ajuda/ajuda.page.html
+++ b/src/app/ajuda/ajuda.page.html
@@ -9,5 +9,161 @@
 
 
 <ion-content>
+  <ion-title><h3>Categoria de Itens</h3></ion-title>
+  <br>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Alimentação</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Alimentação, Descricao Alimentação, Descricao Alimentação,
+      Descricao Alimentação, Descricao Alimentação, Descricao Alimentação,Descricao Alimentação,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Bem-Estar</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Bem-Estar, Descricao Bem-Estar, Descricao Bem-Estar,
+      Descricao Bem-Estar, Descricao Bem-Estar, Descricao Bem-Estar,Descricao Bem-Estar,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Conveniência</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Conveniência, Descricao Conveniência, Descricao Conveniência,
+      Descricao Conveniência, Descricao Conveniência, Descricao Conveniência,Descricao Conveniência,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Cultura e Entretenimento</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Cultura e Entretenimento, Descricao Cultura e Entretenimento, Descricao Cultura e Entretenimento,
+      Descricao Cultura e Entretenimento, Descricao Cultura e Entretenimento, Descricao Cultura e Entretenimento,Descricao Cultura e Entretenimento,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Educação</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Educação, Descricao Educação, Descricao Educação,
+      Descricao Educação, Descricao Educação, Descricao Educação,
+      Descricao Educação,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Residênciais</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Residênciais, Descricao Gastos Residênciais, Descricao Gastos Residênciais,
+      Descricao Gastos Residênciais, Descricao Gastos Residênciais, Descricao Gastos Residênciais,
+      Descricao Gastos Residênciais,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Mobilidade</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Mobilidade, Descricao Gastos Mobilidade, Descricao Gastos Mobilidade,
+      Descricao Gastos Mobilidade, Descricao Gastos Mobilidade, Descricao Gastos Mobilidade,
+      Descricao Gastos Mobilidade,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Moradia</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Moradia, Descricao Gastos Moradia, Descricao Gastos Moradia,
+      Descricao Gastos Moradia, Descricao Gastos Moradia, Descricao Gastos Moradia,
+      Descricao Gastos Moradia,
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Refeição</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Refeição, Descricao Gastos Refeição, Descricao Gastos Refeição,
+      Descricao Gastos Refeição, Descricao Gastos Refeição, Descricao Gastos Refeição,
+      Descricao Gastos Refeição,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Saúde</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Saúde, Descricao Gastos Saúde, Descricao Gastos Saúde,
+      Descricao Gastos Saúde, Descricao Gastos Saúde, Descricao Gastos Saúde,
+      Descricao Gastos Saúde,
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Vestuário</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Vestuário, Descricao Gastos Vestuário, Descricao Gastos Vestuário,
+      Descricao Gastos Vestuário, Descricao Gastos Vestuário, Descricao Gastos Vestuário,
+      Descricao Gastos Vestuário,
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Outras despesas variáveis</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Gastos Outras despesas variáveis, Descricao Gastos Outras despesas variáveis, Descricao Gastos Outras despesas variáveis,
+      Descricao Gastos Outras despesas variáveis, Descricao Gastos Outras despesas variáveis, Descricao Gastos Outras despesas variáveis,
+      Descricao Gastos Outras despesas variáveis,
+    </ion-card-content>
+  </ion-card>
+
+ <ion-card>
+    <ion-card-header>
+      <ion-card-title>Outras despesas fixas</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Descricao Outras despesas fixas, Descricao Outras despesas fixas, Descricao Outras despesas fixas,
+      Descricao Outras despesas fixas, Descricao Outras despesas fixas, Descricao Outras despesas fixas,
+      Descricao Outras despesas fixas,
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
